[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/title.png" type="Texture" id=1]
[ext_resource path="res://UI/lowrextheme.tres" type="Theme" id=2]
[ext_resource path="res://menus/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://world/TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://world/background.png" type="Texture" id=5]
[ext_resource path="res://enemies/BossBomb.tscn" type="PackedScene" id=6]
[ext_resource path="res://player/char.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ViewportContainer/Viewport/TextureRect:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -64.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ViewportContainer/Viewport/TextureRect:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 64.0, 128.0 ]
}

[node name="StartMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.0470588, 0.0588235, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "title"
playback_speed = 0.1
anims/title = SubResource( 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
stretch_shrink = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 114, 66 )
handle_input_locally = false
render_target_update_mode = 3

[node name="TextureRect" type="TextureRect" parent="ViewportContainer/Viewport"]
margin_top = -64.0
margin_right = 228.0
margin_bottom = 64.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="ViewportContainer/Viewport" instance=ExtResource( 4 )]
tile_data = PoolIntArray( 327681, 0, 196612, 393234, 0, 262144, 458770, 0, 262145, 524288, 0, 196612, 524290, 0, 458754, 524291, 0, 458755, 524303, 0, 262144, 524306, 0, 262145, 589837, 0, 65536, 589838, 0, 1, 589839, 0, 393220, 589842, 0, 262145, 655360, 0, 458754, 655361, 0, 458756, 655362, 0, 458756, 655363, 0, 458756, 655364, 0, 458756, 655365, 0, 458756, 655366, 0, 458756, 655367, 0, 458756, 655368, 0, 458756, 655369, 0, 458756, 655370, 0, 458756, 655371, 0, 458756, 655372, 0, 458756, 655373, 0, 393216, 655374, 0, 65539, 655375, 0, 327684, 655376, 0, 458756, 655377, 0, 458756, 655378, 0, 524291 )

[node name="char" type="Sprite" parent="ViewportContainer/Viewport"]
position = Vector2( 18, 45 )
texture = ExtResource( 7 )
hframes = 8
frame = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ViewportContainer/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ViewportContainer/Viewport/VBoxContainer"]
margin_right = 114.0
margin_bottom = 32.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="BossBomb" parent="ViewportContainer/Viewport" instance=ExtResource( 6 )]
position = Vector2( 87, 51 )

[node name="VBoxContainer2" type="VBoxContainer" parent="ViewportContainer/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0
margin_bottom = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="ViewportContainer/Viewport/VBoxContainer2"]
margin_right = 114.0
margin_bottom = 13.0
theme = ExtResource( 2 )
text = "start"

[node name="LoadButton" type="Button" parent="ViewportContainer/Viewport/VBoxContainer2"]
margin_top = 17.0
margin_right = 114.0
margin_bottom = 30.0
theme = ExtResource( 2 )
text = "load"
[connection signal="pressed" from="ViewportContainer/Viewport/VBoxContainer2/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ViewportContainer/Viewport/VBoxContainer2/LoadButton" to="." method="_on_LoadButton_pressed"]
